fix: cart images and alignment

--- a/kadoo/src/Components/Cart/Product.css
+++ b/kadoo/src/Components/Cart/Product.css
@@ -12,3 +12,18 @@
   border-bottom-left-radius: 6px;
   border-bottom-right-radius: 6px;
 }
+
+.ToolProductIconImage1 {
+  width: 100%;
+  height: 100%;
+  object-fit: contain !important;
+  border-top-left-radius: 6px;
+  border-top-right-radius: 6px;
+  border-bottom-left-radius: 6px;
+  border-bottom-right-radius: 6px;
+}
+
+.productContainerImage {
+  width: 100%;
+  height: 100%;
+}
